# pydata25-conference

./: .bumpversion.cfg  .gitignore  404.html  LICENSE  README.md  config.yml  index.html  mkdocs.yml  pixi.toml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  init.sh
.github/workflows/: ci.yml  update_proposals_gsheet.yml
code-of-conduct/: index.html
code-of-conduct/enforcement-procedures/: index.html
code-of-conduct/reporting/: index.html
committees/: index.html
committees/code-of-conduct/: index.html
committees/communication/: index.html
committees/diversity/: index.html
committees/experience/: index.html
committees/infrastructure/: index.html
committees/on-site-ops/: index.html
committees/operational-model/: index.html
committees/program/: index.html
committees/steering/: index.html
committees/swag/: index.html
committees/team-communication/: index.html
committees/video/: index.html
docs/: help.md  index.md  installation.md  mission.md  preparation.md  timeline.md
docs/committees/: communication.md  index.md  infrastructure.md  operational-model.md  team-communication.md  video.md
docs/guidelines/: call-for-proposals.md  communication.md  governance.md  grant-applications.md  infrastructure.md  post-conference.md  pretalx.md  swag.md  (+1 more)
guidelines/: index.html
help/: index.html
installation/: index.html
license/: index.html
mission/: index.html
office/: index.html
preparation/: index.html
scripts/: update_submission_gsheet.py
search/: search_index.json
timeline/: index.html
zen/: index.html
(+27 files in other folders)
